refact: create an Application layer to remove Domain dependencies

--- a/src/TradingChat.WebApp/Views/Chat/Create.cshtml
+++ b/src/TradingChat.WebApp/Views/Chat/Create.cshtml
@@ -1,4 +1,5 @@
-﻿@model CreateChatRoomModel
+﻿@using TradingChat.Application.UseCases.CreateChatRoom;
+@model CreateChatRoomCommand
 @{
     ViewData["Title"] = "Create";
 }
