--- a/src/TradingChat.WebApp/Views/Chat/Index.cshtml
+++ b/src/TradingChat.WebApp/Views/Chat/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@using TradingChat.Domain.UseCases.GetChatsInfo;
+﻿@using TradingChat.Application.UseCases.GetChatsInfo;
 @model ChatsInfoResult
 @{
     ViewData["Title"] = "Chats";
