feat: join chat room functionality

--- a/src/TradingChat.WebApp/Views/Chat/Index.cshtml
+++ b/src/TradingChat.WebApp/Views/Chat/Index.cshtml
@@ -13,6 +13,7 @@
             <hr />
             <a asp-action="Create" class="btn btn-primary">Create new Chat</a>
             <hr />
+            <div asp-validation-summary="All" id="validation-summary" class="text-danger" role="alert"></div>
             <div class="container">
                 <div class="row">
                     @foreach (var chat in Model.Chats)
@@ -23,7 +24,10 @@
                                     <h5 class="card-title">@chat.Name</h5>
                                     <p class="card-text">Users: @chat.NumberOfUsers / @chat.MaxNumberOfUsers</p>
                                     <p class="card-text">Owner: @chat.Owner</p>
-                                    <a href="@Url.Action("ChatDetails", "Chat", new { id = chat.Id })" class="btn btn-primary">Join chat</a>
+                                    <form class="join-chat-form" action="@Url.Action("JoinChat", "Chat")" method="post">
+                                        <input type="hidden" name="chatId" value="@chat.Id" />
+                                        <button type="submit" class="btn btn-primary">Join chat</button>
+                                    </form>
                                 </div>
                             </div>
                         </div>
@@ -33,4 +37,64 @@
         </div>
     </div>
 </div>
+
+@section Scripts {
+    <script>
+        $(function() {
+            $(".join-chat-form").submit(function(e) {
+                e.preventDefault();
+
+                var form = $(this);
+
+                var request = $.ajax({
+                    url: form.attr("action"),
+                    type: "POST",
+                    data: form.serialize(),
+                });
+
+                var summary = $("#validation-summary > ul");
+
+                request.then(handleSuccess)
+                    .catch(function (xhr) { handleBadRequest(xhr, summary); })
+                    .catch(function () { handleOtherError(summary); })
+                    .catch(function () { handleNetworkError(summary); });
+            });
+        });
+
+        function handleSuccess(response) {
+            window.location.href = "/Chat/" + response;
+        }
+
+        function handleBadRequest(xhr, summary) {
+            if (xhr.status === 400) {
+                showError(xhr.responseJSON.errors, summary);
+            } else {
+                showError(["An error occurred while joining the chat."]);
+            }
+        }
+
+        function handleOtherError(summary) {
+            showError(["An error occurred while joining the chat."], summary);
+        }
+
+        function handleNetworkError(summary) {
+            summary.html("An error occurred while joining the chat.", summary);
+        }
+
+        function showError(errors, summary)
+        {
+            summary.fadeOut(200, function () {
+
+                summary.empty();
+
+                errors.forEach(function (error) {
+                    summary.append($('<li>').text(error));
+                });
+
+                summary.fadeIn(400);
+            });
+
+        }
+    </script>
+}
 
