feat: send and receive message with signalr

--- a/src/TradingChat.WebApp/Views/Chat/Chat.cshtml
+++ b/src/TradingChat.WebApp/Views/Chat/Chat.cshtml
@@ -25,3 +25,8 @@
 @section Styles{
     <link rel="stylesheet" href="~/css/chat.css" />
 }
+
+@section Scripts{
+    <script src="~/lib/microsoft-signalr/signalr.js"></script>
+    <script src="~/js/chat/chat.js"></script>
+}
