feat: front end improvements

--- a/src/TradingChat.WebApp/Views/Chat/Chat.cshtml
+++ b/src/TradingChat.WebApp/Views/Chat/Chat.cshtml
@@ -23,7 +23,7 @@
 </form>
 
 @section Styles{
-    <link rel="stylesheet" href="~/css/chat.css" />
+    <link rel="stylesheet" href="~/css/chat/chat.css" />
 }
 
 @section Scripts{
