--- a/src/TradingChat.WebApp/Views/Chat/Create.cshtml
+++ b/src/TradingChat.WebApp/Views/Chat/Create.cshtml
@@ -1,7 +1,8 @@
 ﻿@using TradingChat.Application.UseCases.CreateChatRoom;
 @model CreateChatRoomCommand
+
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Create Chat";
 }
 
 <h1>@ViewData["Title"]</h1>
