--- a/src/TradingChat.WebApp/Areas/Identity/Pages/Account/Login.cshtml
+++ b/src/TradingChat.WebApp/Areas/Identity/Pages/Account/Login.cshtml
@@ -9,7 +9,7 @@
 <h1>@ViewData["Title"]</h1>
 
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-8 col-lg-6">
         <section>
             <form id="account" method="post">
                 <h2>Login to your account.</h2>
