--- a/src/TradingChat.WebApp/Areas/Identity/Pages/Account/Register.cshtml
+++ b/src/TradingChat.WebApp/Areas/Identity/Pages/Account/Register.cshtml
@@ -7,7 +7,7 @@
 <h1>@ViewData["Title"]</h1>
 
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-8 col-lg-6">
         <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
             <h2>Create a new account.</h2>
             <hr />
