--- a/src/TradingChat.WebApp/Views/Chat/Chat.cshtml
+++ b/src/TradingChat.WebApp/Views/Chat/Chat.cshtml
@@ -1,4 +1,5 @@
 ﻿@using TradingChat.Application.UseCases.Shared;
+@using TradingChat.Application.UseCases.SendMessage
 @model ChatMessagesDto
 
 @{
@@ -6,6 +7,7 @@
 }
 
 <h1>@Model.Name</h1>
+
 <input type="hidden" id="chat-id" value="@Model.ChatRoomId" />
 
 <div class="chat-messages">
@@ -22,7 +24,7 @@
 </div>
 
 <form class="send-message-form">
-    <textarea rows="3" maxlength="1000" class="message-input"></textarea>
+    <textarea rows="3" maxlength="1000" id="message-input" class="message-input"></textarea>
     <button type="submit" class="send-message-button">Send</button>
 </form>
 
